--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"docs:preview": "vitepress preview docs"
 	},
 	"dependencies": {
+		"@vueuse/core": "^13.1.0",
 		"vue": "^3.5.13"
 	},
 	"devDependencies": {
