--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,18 +1,11 @@
 {
 	"extends": "./tsconfig.app.json",
-	"include": [
-		"src/**/__tests__/*",
-		"env.d.ts",
-		"tests/components/bo_avatar.test.ts",
-		"tests/components/bo_badge.test.ts",
-		"tests/components/bo_icon.test.ts",
-		"src/components/bo_loading_spinner/bo_loading_spinner.test.ts",
-		"src/components/bo_text/bo_text.test.ts"
-	],
+	"include": ["src/**/tests.*", "env.d.ts"],
 	"exclude": [],
 	"compilerOptions": {
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
 		"lib": [],
 		"types": ["node", "jsdom"]
 	}
