refactor: updated logic to fix init error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,6 @@
-# Sample workflow for building and deploying a VitePress site to GitHub Pages
-#
-name: Deploy VitePress site to Pages
+name: Deploy Bamboo docs site to Pages
 
 on:
-  # Runs on pushes targeting the `main` branch. Change this to `master` if you're
-  # using the `master` branch as the default branch.
   push:
     branches: [main]
 
@@ -17,24 +13,25 @@ permissions:
   pages: write
   id-token: write
 
+
 concurrency:
   group: pages
   cancel-in-progress: false
 
 jobs:
+  
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: latest
-
+       - uses: pnpm/action-setup@v3 
+         with:
+           version: 10
+      
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -48,7 +45,7 @@ jobs:
         run: pnpm install
 
       - name: Build with VitePress
-        run: pnpm run docs:build
+        run: pnpm docs:build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
@@ -56,12 +53,11 @@ jobs:
           path: docs/.vitepress/dist
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
+    needs: build
+    runs-on: ubuntu-latest
     name: Deploy
     steps:
       - name: Deploy to GitHub Pages
