--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"prettier": "^3.5.3",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"sass-embedded": "^1.86.3",
 		"tailwindcss": "^4.1.4",
 		"typescript": "^5.7.3",
 		"vite": "^6.2.6",
