--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@vitest/browser": "^3.1.1",
 		"@vitest/coverage-v8": "^3.1.1",
 		"@vitest/eslint-plugin": "^1.1.43",
+		"@vitest/ui": "3.1.2",
 		"@vue/eslint-config-prettier": "^10.2.0",
 		"@vue/eslint-config-typescript": "^14.5.0",
 		"@vue/test-utils": "^2.4.6",
