--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@playwright/test": "^1.52.0",
 		"@tailwindcss/postcss": "^4.1.4",
 		"@tailwindcss/vite": "^4.1.4",
+		"@testing-library/vue": "^8.1.0",
 		"@tsconfig/node22": "^22.0.1",
 		"@types/jsdom": "^21.1.7",
 		"@types/node": "^22.13.5",
@@ -76,10 +77,5 @@
 		"vitepress": "^1.6.3",
 		"vitest": "^3.1.1",
 		"vue-tsc": "^2.2.8"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
 	}
 }
