refactor: build and other fixes

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
 	],
 	"scripts": {
 		"test": "vitest --update --coverage --silent=false",
-		"build-only": "vite build",
-		"type-check": "vue-tsc --build",
+		"type-check": "vue-tsc --noEmit",
 		"lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
 		"lint:eslint": "eslint . --fix",
 		"lint": "run-s lint:*",
 		"format": "prettier --write src/",
-		"build": "NODE_ENV=production run-p type-check \"build-only {@}\" && pnpm run build:css:min",
+		"build": "NODE_ENV=production run-p type-check \"build:only {@}\" && pnpm run build:css:min",
+		"build:only": "vite build",
 		"build:css:min": "NPM_ENV=production npx @tailwindcss/cli -i ./src/lib.css -o ./dist/lib.min.css --minify",
 		"build:css": "NPM_ENV=development npx @tailwindcss/cli -i ./src/lib.css -o ./dist/lib.css",
 		"docs:dev": "vitepress dev docs",
