--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
 	"scripts": {
 		"test": "vitest --update --coverage --silent=false",
 		"type-check": "vue-tsc --noEmit",
-		"lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-		"lint:eslint": "eslint . --fix",
-		"lint": "run-s lint:*",
+		"lint": "oxlint . --fix -D correctness --ignore-path .gitignore",
 		"format": "prettier --write src/",
 		"build": "NODE_ENV=production run-p type-check \"build:only {@}\" && pnpm run build:css:min",
 		"build:only": "vite build",
