--- a/package.json
+++ b/package.json
@@ -32,41 +32,42 @@
 		"docs:preview": "vitepress preview docs"
 	},
 	"dependencies": {
-		"@vueuse/core": "^13.1.0",
-		"vue": "^3.5.13"
+		"@vueuse/core": "^13.3.0",
+		"vue": "^3.5.16"
 	},
 	"devDependencies": {
-		"@tailwindcss/cli": "^4.1.7",
+		"@tailwindcss/cli": "^4.1.8",
 		"@testing-library/vue": "^8.1.0",
-		"@tsconfig/node22": "^22.0.1",
+		"@tsconfig/node22": "^22.0.2",
 		"@types/jsdom": "^21.1.7",
-		"@types/node": "^22.15.19",
+		"@types/node": "^22.15.30",
 		"@vitejs/plugin-vue": "^5.2.3",
-		"@vitest/browser": "^3.1.2",
-		"@vitest/coverage-v8": "^3.1.1",
-		"@vitest/eslint-plugin": "^1.1.43",
-		"@vitest/ui": "^3.1.2",
+		"@vitest/browser": "^3.2.2",
+		"@vitest/coverage-v8": "^3.2.2",
+		"@vitest/eslint-plugin": "^1.2.1",
+		"@vitest/ui": "^3.2.2",
 		"@vue/eslint-config-prettier": "^10.2.0",
 		"@vue/eslint-config-typescript": "^14.5.0",
 		"@vue/test-utils": "^2.4.6",
 		"@vue/tsconfig": "^0.7.0",
 		"autoprefixer": "^10.4.21",
-		"eslint": "^9.27.0",
-		"eslint-plugin-oxlint": "^0.16.11",
-		"eslint-plugin-vue": "^10.0.0",
+		"eslint": "^9.28.0",
+		"eslint-plugin-oxlint": "^0.18.0",
+		"eslint-plugin-vue": "^10.2.0",
 		"jsdom": "^26.1.0",
-		"npm-run-all2": "^7.0.2",
-		"oxlint": "^0.16.11",
+		"npm-run-all": "^4.1.5",
+		"npm-run-all2": "^8.0.4",
+		"oxlint": "^0.18.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-organize-imports": "^4.1.0",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^4.1.7",
+		"prettier-plugin-tailwindcss": "^0.6.12",
+		"tailwindcss": "^4.1.8",
 		"typescript": "^5.7.3",
 		"vite": "^6.3.5",
 		"vite-plugin-dts": "^4.5.0",
 		"vite-svg-loader": "^5.1.0",
 		"vitepress": "^1.6.3",
-		"vitest": "^3.1.1",
+		"vitest": "^3.2.2",
 		"vue-tsc": "^2.2.8"
 	}
 }
