--- a/package.json
+++ b/package.json
@@ -39,18 +39,15 @@
 		"@tailwindcss/cli": "^4.1.8",
 		"@testing-library/vue": "^8.1.0",
 		"@tsconfig/node22": "^22.0.2",
-		"@types/jsdom": "^21.1.7",
 		"@types/node": "^22.15.30",
 		"@vitejs/plugin-vue": "^5.2.3",
-		"@vitest/browser": "^3.2.2",
 		"@vitest/coverage-v8": "^3.2.2",
-		"@vitest/ui": "^3.2.2",
+		"@vitest/ui": "3.2.2",
 		"@vue/test-utils": "^2.4.6",
 		"@vue/tsconfig": "^0.7.0",
 		"autoprefixer": "^10.4.21",
 		"jsdom": "^26.1.0",
 		"npm-run-all": "^4.1.5",
-		"npm-run-all2": "^8.0.4",
 		"oxlint": "^0.18.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-organize-imports": "^4.1.0",
