--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"scripts": {
 		"test": "vitest --update --coverage --silent=false",
 		"type-check": "vue-tsc --noEmit",
-		"lint": "oxlint --fix",
+		"lint": "oxlint --fix --config .oxlintrc.json",
 		"format": "prettier --write src/",
 		"build": "NODE_ENV=production run-p type-check \"build:only {@}\" && pnpm run build:css:min",
 		"build:only": "vite build",
