--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
 		"format": "prettier --write src/",
 		"build": "NODE_ENV=production run-p type-check \"build:only {@}\" && pnpm run build:css:min",
 		"build:only": "vite build",
-		"build:css:min": "NPM_ENV=production npx @tailwindcss/cli -i ./src/lib.css -o ./dist/lib.min.css --minify",
-		"build:css": "NPM_ENV=development npx @tailwindcss/cli -i ./src/lib.css -o ./dist/lib.css",
 		"docs:dev": "vitepress dev docs",
 		"docs:build": "vitepress build docs",
 		"docs:preview": "vitepress preview docs"
@@ -36,7 +34,6 @@
 		"vue": "^3.5.16"
 	},
 	"devDependencies": {
-		"@tailwindcss/cli": "^4.1.8",
 		"@testing-library/vue": "^8.1.0",
 		"@tsconfig/node22": "^22.0.2",
 		"@types/node": "^22.15.30",
@@ -54,8 +51,7 @@
 		"oxlint": "^0.18.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-organize-imports": "^4.1.0",
-		"prettier-plugin-tailwindcss": "^0.6.12",
-		"tailwindcss": "^4.1.8",
+		"sass-embedded": "^1.92.1",
 		"typescript": "^5.7.3",
 		"vite": "^6.3.5",
 		"vite-plugin-dts": "^4.5.0",
