--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"format": "prettier --write src/",
 		"build": "NODE_ENV=production run-p type-check \"build:only {@}\"",
 		"test": "vitest --coverage --silent=false",
-		"build:only": "vite build",
+		"build:only": "vite build --mode production",
 		"docs:dev": "vitepress dev",
 		"docs:build": "vitepress build",
 		"docs:preview": "vitepress preview",
