--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"oxlint": "~1.8.0",
 		"prettier": "3.6.2",
 		"prettier-plugin-organize-imports": "^4.2.0",
+		"sass-embedded": "^1.92.1",
 		"start-server-and-test": "^2.0.12",
 		"typescript": "~5.8.0",
 		"vite": "npm:rolldown-vite@latest",
