--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
 		"dev": "vite",
 		"build": "run-p type-check \"build-only {@}\" --",
 		"preview": "vite preview",
-		"test:unit": "vitest",
-		"prepare": "cypress install",
-		"test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-		"test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
+		"test:unit": "vitest --coverage",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --build",
 		"lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
@@ -38,14 +35,13 @@
 		"@types/jsdom": "^21.1.7",
 		"@types/node": "^22.16.5",
 		"@vitejs/plugin-vue": "^6.0.1",
+		"@vitest/coverage-v8": "3.2.4",
 		"@vitest/eslint-plugin": "^1.3.4",
 		"@vue/eslint-config-prettier": "^10.2.0",
 		"@vue/eslint-config-typescript": "^14.6.0",
 		"@vue/test-utils": "^2.4.6",
 		"@vue/tsconfig": "^0.7.0",
-		"cypress": "^14.5.3",
 		"eslint": "^9.31.0",
-		"eslint-plugin-cypress": "^5.1.0",
 		"eslint-plugin-oxlint": "~1.8.0",
 		"eslint-plugin-vue": "~10.3.0",
 		"jiti": "^2.4.2",
@@ -65,5 +61,6 @@
 	},
 	"engines": {
 		"node": "^20.19.0 || >=22.12.0"
-	}
+	},
+	"packageManager": "pnpm@10.17.0"
 }
