chore: new lint pipeline and test script update

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,6 +28,14 @@ jobs:
         run: |
           pnpm install
 
-      - name: Run tests
+      - name: Run Type Check
         run: |
-          pnpm test
+          pnpm type-check
+
+      - name: Run Lint
+        run: |
+          pnpm lint
+
+      - name: Run Spell Check
+        run: |
+          pnpm lint:spell
