--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: 'unit-tests'
+name: 'lint'
 on:
   pull_request:
     branches:
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  tests:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
