--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "vue-tsc": "^3.0.4"
   },
   "engines": {
-    "node": "^20.19.0 || >=22.12.0"
+    "node": ">=18 <19 || >=20 <21 || >=22"
   },
   "packageManager": "pnpm@10.17.0"
 }
