--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,12 @@
 root = true
 
-[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue,css,scss,sass,less,styl}]
+[*]
 charset = utf-8
 indent_size = 2
-indent_style = tab
+indent_style = space
+end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-end_of_line = lf
-max_line_length = 100
 
+[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue}]
+indent_style = tab
