--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prepare": "husky",
     "docs:dev": "vitepress dev src-docs",
     "docs:build": "vitepress build src-docs",
-    "docs:preview": "vitepress preview src-docs"
+    "docs:preview": "pnpm docs:build && vitepress preview src-docs"
   },
   "dependencies": {
     "vue": "^3.5.22"
