--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "lint": "run-s lint:*",
     "format": "PRETTIER_EXPERIMENTAL_CLI=1 prettier --write src/",
     "prepare": "husky",
-    "docs:dev": "vitepress dev src-docs",
-    "docs:build": "vitepress build src-docs",
-    "docs:preview": "pnpm docs:build && vitepress preview src-docs"
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   },
   "dependencies": {
     "vue": "^3.5.22"
