refactor: spell check updates and lint | CI refactor

--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
-          node-version: 22
+          node-version: 'lts/*'
           cache: pnpm
 
       - name: Setup Pages
