--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -1,4 +1,4 @@
-name: 'unit-tests'
+name: 'test'
 on:
   pull_request:
     branches:
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  tests:
+  unit:
     runs-on: ubuntu-latest
 
     permissions:
@@ -24,10 +24,10 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
 
-      - name: Setup Node.js 22
+      - name: Setup LTS Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: 22
+          node-version: 'lts/*'
           cache: pnpm
 
       - name: Install dependencies
