--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "build": "vite optimize && vite build --mode production",
     "test": "vitest --coverage",
     "type-check": "vue-tsc --build",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
     "lint:eslint": "eslint . --fix --ignore-pattern .gitignore",
-    "lint:spell": "cspell '**/*.{ts,vue,md}' --config cspell.json",
+    "lint:spell": "cspell **/*.{ts,vue,md} --config cspell.yaml",
     "lint": "run-s lint:*",
     "format": "PRETTIER_EXPERIMENTAL_CLI=1 prettier --write src/",
     "prepare": "husky",
@@ -49,23 +49,24 @@
     "@prettier/plugin-oxc": "^0.0.4",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "^24.8.1",
+    "@types/node": "^24.9.1",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vitest/coverage-v8": "3.2.4",
-    "@vitest/eslint-plugin": "^1.3.23",
+    "@vitest/coverage-v8": "4.0.3",
+    "@vitest/eslint-plugin": "^1.3.24",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
-    "cspell": "^9.2.1",
+    "cspell": "^9.2.2",
     "eslint": "^9.38.0",
-    "eslint-plugin-oxlint": "~1.23.0",
+    "eslint-plugin-oxlint": "~1.24.0",
     "eslint-plugin-vue": "~10.5.1",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
     "jsdom": "^27.0.1",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.23.0",
+    "oxlint": "~1.24.0",
+    "oxlint-tsgolint": "^0.3.0",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
     "sass-embedded": "^1.93.2",
@@ -76,11 +77,11 @@
     "vite-plugin-vue-devtools": "^8.0.3",
     "vite-svg-loader": "^5.1.0",
     "vitepress": "2.0.0-alpha.12",
-    "vitest": "^3.2.4",
-    "vue-tsc": "^3.1.1"
+    "vitest": "^4.0.3",
+    "vue-tsc": "^3.1.2"
   },
+  "packageManager": "pnpm@10.19.0",
   "engines": {
-    "node": ">=18 <19 || >=20 <21 || >=22"
-  },
-  "packageManager": "pnpm@10.18.3"
+    "node": ">=22"
+  }
 }
