--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,19 +1,12 @@
 {
-  "extends": "@tsconfig/node22/tsconfig.json",
-  "include": [
-    "vite.config.*",
-    "vitest.config.*",
-    "cypress.config.*",
-    "nightwatch.conf.*",
-    "playwright.config.*",
-    "eslint.config.*"
-  ],
-  "compilerOptions": {
-    "noEmit": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+	"extends": "@tsconfig/node22/tsconfig.json",
+	"include": ["vite.config.ts", "vitest.config.ts", "playwright.config.ts", "eslint.config.ts"],
+	"compilerOptions": {
+		"noEmit": true,
+		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node"]
-  }
+		"module": "esnext",
+		"moduleResolution": "bundler",
+		"types": ["node"]
+	}
 }
