--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,11 +1,12 @@
 {
-  "extends": "./tsconfig.app.json",
-  "include": ["src/**/__tests__/*", "env.d.ts"],
-  "exclude": [],
-  "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-
-    "lib": [],
-    "types": ["node", "jsdom"]
-  }
+	"extends": "./tsconfig.app.json",
+	"include": ["src/**/__tests__/*", "env.d.ts"],
+	"exclude": [],
+	"compilerOptions": {
+		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
+		"module": "esnext",
+		"moduleResolution": "bundler",
+		"lib": [],
+		"types": ["node", "jsdom"]
+	}
 }
