--- a/.github/workflows/type-check.yaml
+++ b/.github/workflows/type-check.yaml
@@ -1,4 +1,4 @@
-name: 'code quality - type-check'
+name: 'code quality / type check'
 on:
   pull_request:
     branches:
@@ -11,7 +11,7 @@ permissions:
   contents: read
 
 jobs:
-  type-check:
+  run-type-check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
