chore: CI name change

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: 'code quality / lint'
+name: 'lint'
 on:
   pull_request:
     branches:
@@ -11,7 +11,30 @@ permissions:
   contents: read
 
 jobs:
-  run-lint:
+  run-eslint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup LTS Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: 'lts/*'
+          cache: pnpm
+
+      - name: Install dependencies
+        run: |
+          pnpm install
+
+      - name: Run eslint
+        run: |
+          pnpm lint:eslint
+
+  run-oxlint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -33,7 +56,3 @@ jobs:
       - name: Run oxlint
         run: |
           pnpm lint:oxlint
-
-      - name: Run eslint
-        run: |
-          pnpm lint:eslint
