--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
     "lint:eslint": "eslint . --fix --ignore-pattern .gitignore",
     "lint:spell": "cspell **/*.{ts,vue,md} --config cspell.yaml",
+    "lint:style": "stylelint 'src/**/*.{css,scss,vue}' --fix",
     "lint": "run-s lint:*",
     "format": "PRETTIER_EXPERIMENTAL_CLI=1 prettier --write src/",
     "prepare": "husky",
@@ -67,10 +68,15 @@
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.24.0",
     "oxlint-tsgolint": "^0.3.0",
+    "postcss-html": "^1.8.0",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
     "sass-embedded": "^1.93.2",
     "start-server-and-test": "^2.1.2",
+    "stylelint": "^16.25.0",
+    "stylelint-config-standard": "^39.0.1",
+    "stylelint-config-standard-scss": "^16.0.0",
+    "stylelint-config-standard-vue": "^1.0.0",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@latest",
     "vite-plugin-dts": "^4.5.4",
