--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint:spell": "cspell **/*.{ts,vue,md} --config cspell.yaml",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}' --fix",
     "lint": "run-s lint:*",
-    "format": "PRETTIER_EXPERIMENTAL_CLI=1 prettier --write src/",
+    "format": "prettier --write src/",
     "prepare": "husky",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
@@ -50,28 +50,28 @@
     "@prettier/plugin-oxc": "^0.0.4",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "^24.9.1",
+    "@types/node": "^24.9.2",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vitest/coverage-v8": "4.0.3",
-    "@vitest/eslint-plugin": "^1.3.24",
+    "@vitest/coverage-v8": "4.0.6",
+    "@vitest/eslint-plugin": "^1.4.0",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "cspell": "^9.2.2",
-    "eslint": "^9.38.0",
-    "eslint-plugin-oxlint": "~1.24.0",
+    "eslint": "^9.39.0",
+    "eslint-plugin-oxlint": "~1.25.0",
     "eslint-plugin-vue": "~10.5.1",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
-    "jsdom": "^27.0.1",
+    "jsdom": "^27.1.0",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.24.0",
-    "oxlint-tsgolint": "^0.3.0",
+    "oxlint": "~1.25.0",
+    "oxlint-tsgolint": "^0.4.0",
     "postcss-html": "^1.8.0",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
-    "sass-embedded": "^1.93.2",
+    "sass-embedded": "^1.93.3",
     "start-server-and-test": "^2.1.2",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.1",
@@ -83,10 +83,10 @@
     "vite-plugin-vue-devtools": "^8.0.3",
     "vite-svg-loader": "^5.1.0",
     "vitepress": "2.0.0-alpha.12",
-    "vitest": "^4.0.3",
+    "vitest": "^4.0.6",
     "vue-tsc": "^3.1.2"
   },
-  "packageManager": "pnpm@10.19.0",
+  "packageManager": "pnpm@10.20.0",
   "engines": {
     "node": ">=20 <21 || >=22"
   }
