--- a/cspell.yaml
+++ b/cspell.yaml
@@ -1,7 +1,7 @@
 $schema: https://raw.githubusercontent.com/streetsidesoftware/cspell/main/cspell.schema.json
 version: '0.2'
 useGitignore: true
-language: en-gb,en-us
+language: en-gb,en-us,lorem,lorem-ipsum
 
 ignorePaths:
   - 'node_modules/**'
@@ -38,7 +38,4 @@ languageSettings:
     caseSensitive: true
 
 import:
-  - '@cspell/dict-css/cspell-ext.json'
-  - '@cspell/dict-html/cspell-ext.json'
-  - '@cspell/dict-typescript/cspell-ext.json'
   - '@cspell/dict-vue/cspell-ext.json'
