--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "type-check": "vue-tsc --build",
     "lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
     "lint:eslint": "eslint . --fix --ignore-pattern .gitignore",
-    "lint:spell": "cspell **/*.{ts,vue,md} --config cspell.yaml",
+    "lint:spell": "cspell . --config cspell.yaml",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}' --fix",
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
