--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "type": "module",
   "exports": {
     "./components": {
-      "import": "./dist/components.js",
-      "types": "./dist/components/index.d.ts"
+      "types": "./dist/components/index.d.ts",
+      "import": "./dist/components.js"
     },
     "./composables": {
-      "import": "./dist/composables.js",
-      "types": "./dist/composables/index.d.ts"
+      "types": "./dist/composables/index.d.ts",
+      "import": "./dist/composables.js"
     },
     "./core": {
-      "import": "./dist/core.js",
-      "types": "./dist/core/index.d.ts"
+      "types": "./dist/core/index.d.ts",
+      "import": "./dist/core.js"
     },
     "./services": {
-      "import": "./dist/services.js",
-      "types": "./dist/services/index.d.ts"
+      "types": "./dist/services/index.d.ts",
+      "import": "./dist/services.js"
     },
     "./shared": {
-      "import": "./dist/shared.js",
-      "types": "./dist/shared/index.d.ts"
+      "types": "./dist/shared/index.d.ts",
+      "import": "./dist/shared.js"
     },
     "./lib.css": {
       "import": "./dist/lib.css",
@@ -33,8 +33,8 @@
     "test": "vitest --coverage",
     "type-check": "vue-tsc --build",
     "lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
-    "lint:eslint": "eslint . --fix --ignore-pattern .gitignore",
     "lint:spell": "cspell . --config cspell.yaml",
+    "lint:style": "stylelint \"**/*.{vue,css,scss,sass}\" --fix",
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
     "prepare": "husky",
@@ -43,53 +43,47 @@
     "docs:preview": "vitepress preview"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "vue": "^3.5.25"
   },
   "devDependencies": {
     "@cspell/dict-css": "^4.0.18",
-    "@cspell/dict-html": "^4.0.12",
+    "@cspell/dict-html": "^4.0.13",
     "@cspell/dict-typescript": "^3.2.3",
     "@cspell/dict-vue": "^3.0.5",
-    "@prettier/plugin-oxc": "^0.0.4",
-    "@tsconfig/node22": "^22.0.4",
+    "@prettier/plugin-oxc": "^0.1.3",
+    "@tsconfig/node22": "^22.0.5",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "^24.10.1",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vitest/coverage-v8": "4.0.9",
-    "@vitest/eslint-plugin": "^1.4.2",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.6.0",
+    "@types/node": "^25.0.1",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vitest/coverage-v8": "4.0.15",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
-    "cspell": "^9.3.2",
-    "eslint": "^9.39.1",
-    "eslint-plugin-oxlint": "~1.28.0",
-    "eslint-plugin-vue": "~10.5.1",
+    "cspell": "^9.4.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.3.0",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.28.0",
-    "oxlint-tsgolint": "^0.6.0",
+    "oxlint": "~1.32.0",
+    "oxlint-tsgolint": "^0.8.6",
     "postcss-html": "^1.8.0",
-    "prettier": "3.6.2",
+    "prettier": "3.7.4",
     "prettier-plugin-organize-imports": "^4.3.0",
-    "sass-embedded": "^1.93.3",
-    "start-server-and-test": "^2.1.2",
-    "stylelint": "^16.25.0",
+    "sass-embedded": "^1.96.0",
+    "start-server-and-test": "^2.1.3",
+    "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
     "stylelint-config-standard-scss": "^16.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@latest",
     "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-vue-devtools": "^8.0.3",
+    "vite-plugin-vue-devtools": "^8.0.5",
     "vite-svg-loader": "^5.1.0",
     "vitepress": "2.0.0-alpha.12",
-    "vitest": "^4.0.9",
-    "vue-tsc": "^3.1.4"
+    "vitest": "^4.0.15",
+    "vue-tsc": "^3.1.8"
   },
-  "packageManager": "pnpm@10.22.0",
+  "packageManager": "pnpm@10.25.0",
   "engines": {
     "node": ">=20 <21 || >=22"
   }
