feat: new docs validation pipeline created

--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
 	},
 	"scripts": {
 		"build": "vite build --mode production",
-		"test": "vitest --coverage",
-		"type-check": "vue-tsc --build",
+		"test": "vitest --run --coverage",
+		"type-check": "vue-tsc --noEmit",
 		"lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
 		"lint:spell": "cspell . --config cspell.yaml",
-		"lint:style": "stylelint \"**/*.{vue,css,scss,sass}\" --fix",
+		"lint:style": "stylelint \"**/*.{vue,css,scss,sass}\" --fix --config stylelint.config.js",
 		"lint": "run-s lint:*",
-		"format": "prettier --write src/",
-		"prepare": "husky",
+		"format": "prettier --write \"src/**/*.{js,ts,vue,css,scss,json,md}\"",
+		"prepare": "husky install",
 		"docs:dev": "vitepress dev",
 		"docs:build": "vitepress build",
 		"docs:preview": "vitepress preview"
