--- a/package.json
+++ b/package.json
@@ -78,8 +78,5 @@
 		"vitest": "^4.0.15",
 		"vue-tsc": "^3.1.8"
 	},
-	"packageManager": "pnpm@10.25.0",
-	"engines": {
-		"node": ">=18 <24"
-	}
+	"packageManager": "pnpm@10.25.0"
 }
