--- a/package.json
+++ b/package.json
@@ -1,82 +1,88 @@
 {
-	"name": "@mrksbnc/bamboo",
-	"version": "0.0.1-alpha.1",
-	"type": "module",
-	"exports": {
-		"./components": {
-			"types": "./dist/components/index.d.ts",
-			"import": "./dist/components.js"
-		},
-		"./core": {
-			"types": "./dist/core/index.d.ts",
-			"import": "./dist/core.js"
-		},
-		"./services": {
-			"types": "./dist/services/index.d.ts",
-			"import": "./dist/services.js"
-		},
-		"./lib.css": {
-			"import": "./dist/lib.css",
-			"require": "./dist/lib.css"
-		}
-	},
-	"publishConfig": {
-		"registry": "https://npm.pkg.github.com"
-	},
-	"scripts": {
-		"build": "vite build --mode production",
-		"test": "vitest --run --coverage",
-		"type-check": "vue-tsc --noEmit",
-		"lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
-		"lint:spell": "cspell . --config cspell.yaml",
-		"lint:style": "stylelint \"**/*.{vue,css,scss,sass}\" --fix --config stylelint.config.js",
-		"lint": "run-s lint:*",
-		"format": "prettier --write \"src/**/*.{js,ts,vue,css,scss,json,md}\"",
-		"prepare": "husky install",
-		"docs:dev": "vitepress dev",
-		"docs:build": "vitepress build",
-		"docs:preview": "vitepress preview"
-	},
-	"dependencies": {
-		"vue": "^3.5.25"
-	},
-	"devDependencies": {
-		"@cspell/dict-css": "^4.0.18",
-		"@cspell/dict-html": "^4.0.13",
-		"@cspell/dict-typescript": "^3.2.3",
-		"@cspell/dict-vue": "^3.0.5",
-		"@prettier/plugin-oxc": "^0.1.3",
-		"@tsconfig/node22": "^22.0.5",
-		"@types/jsdom": "^27.0.0",
-		"@types/node": "^25.0.1",
-		"@vitejs/plugin-vue": "^6.0.3",
-		"@vitest/coverage-v8": "4.0.15",
-		"@vue/test-utils": "^2.4.6",
-		"@vue/tsconfig": "^0.8.1",
-		"cspell": "^9.4.0",
-		"husky": "^9.1.7",
-		"jiti": "^2.6.1",
-		"jsdom": "^27.3.0",
-		"npm-run-all2": "^8.0.4",
-		"oxlint": "~1.32.0",
-		"oxlint-tsgolint": "^0.8.6",
-		"postcss-html": "^1.8.0",
-		"prettier": "3.7.4",
-		"prettier-plugin-organize-imports": "^4.3.0",
-		"sass-embedded": "^1.96.0",
-		"start-server-and-test": "^2.1.3",
-		"stylelint": "^16.26.1",
-		"stylelint-config-standard": "^39.0.1",
-		"stylelint-config-standard-scss": "^16.0.0",
-		"stylelint-config-standard-vue": "^1.0.0",
-		"typescript": "~5.9.3",
-		"vite": "npm:rolldown-vite@latest",
-		"vite-plugin-dts": "^4.5.4",
-		"vite-plugin-vue-devtools": "^8.0.5",
-		"vite-svg-loader": "^5.1.0",
-		"vitepress": "2.0.0-alpha.12",
-		"vitest": "^4.0.15",
-		"vue-tsc": "^3.1.8"
-	},
-	"packageManager": "pnpm@10.25.0"
+  "name": "@mrksbnc/bamboo",
+  "version": "0.0.1-alpha.1",
+  "type": "module",
+  "exports": {
+    "./components": {
+      "types": "./dist/components/index.d.ts",
+      "import": "./dist/components.js"
+    },
+    "./core": {
+      "types": "./dist/core/index.d.ts",
+      "import": "./dist/core.js"
+    },
+    "./services": {
+      "types": "./dist/services/index.d.ts",
+      "import": "./dist/services.js"
+    },
+    "./lib.css": {
+      "import": "./dist/lib.css",
+      "require": "./dist/lib.css"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "scripts": {
+    "build": "vite build --mode production",
+    "test": "vitest --run --coverage",
+    "type-check": "vue-tsc --noEmit",
+    "lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
+    "lint:spell": "cspell . --config cspell.yaml",
+    "lint:style": "stylelint \"**/*.{vue,css,scss,sass}\" --fix --config stylelint.config.js",
+    "lint": "run-s lint:*",
+    "format": "prettier --write \"src/**/*.{js,ts,vue,css,scss,json,md}\"",
+    "prepare": "husky install",
+    "prepublishOnly": "pnpm build",
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
+  },
+  "dependencies": {
+    "vue": "^3.5.25"
+  },
+  "devDependencies": {
+    "@cspell/dict-css": "^4.0.18",
+    "@cspell/dict-html": "^4.0.13",
+    "@cspell/dict-typescript": "^3.2.3",
+    "@cspell/dict-vue": "^3.0.5",
+    "@prettier/plugin-oxc": "^0.1.3",
+    "@tsconfig/node22": "^22.0.5",
+    "@types/jsdom": "^27.0.0",
+    "@types/node": "^25.0.1",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vitest/coverage-v8": "4.0.15",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.8.1",
+    "cspell": "^9.4.0",
+    "husky": "^9.1.7",
+    "jiti": "^2.6.1",
+    "jsdom": "^27.3.0",
+    "npm-run-all2": "^8.0.4",
+    "oxlint": "~1.32.0",
+    "oxlint-tsgolint": "^0.8.6",
+    "postcss-html": "^1.8.0",
+    "prettier": "3.7.4",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "sass-embedded": "^1.96.0",
+    "start-server-and-test": "^2.1.3",
+    "stylelint": "^16.26.1",
+    "stylelint-config-standard": "^39.0.1",
+    "stylelint-config-standard-scss": "^16.0.0",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "typescript": "~5.9.3",
+    "vite": "npm:rolldown-vite@latest",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-svg-loader": "^5.1.0",
+    "vitepress": "2.0.0-alpha.12",
+    "vitest": "^4.0.15",
+    "vue-tsc": "^3.1.8"
+  },
+  "packageManager": "pnpm@10.25.0"
 }
