--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,31 +1,26 @@
 {
-  "$schema": "./node_modules/oxlint/configuration_schema.json",
-  "plugins": [
-    "unicorn",
-    "typescript",
-    "oxc",
-    "vue"
-  ],
-  "categories": {
-    "correctness": "error",
-    "suspicious": "warn",
-    "pedantic": "off"
-  },
-  "rules": {
-    "typescript/no-explicit-any": "warn",
-    "unicorn/filename-case": "off"
-  },
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "ignorePatterns": [
-    "dist/",
-    "dist-ssr/",
-    "coverage/",
-    "node_modules/",
-    ".vitepress/cache/",
-    "docs/.vitepress/"
-  ]
+	"$schema": "./node_modules/oxlint/configuration_schema.json",
+	"plugins": ["unicorn", "typescript", "oxc", "vue"],
+	"categories": {
+		"correctness": "error",
+		"suspicious": "warn",
+		"pedantic": "off"
+	},
+	"rules": {
+		"typescript/no-explicit-any": "warn",
+		"unicorn/filename-case": "off"
+	},
+	"env": {
+		"browser": true,
+		"es2021": true,
+		"node": true
+	},
+	"ignorePatterns": [
+		"dist/",
+		"dist-ssr/",
+		"coverage/",
+		"node_modules/",
+		".vitepress/cache/",
+		"docs/.vitepress/"
+	]
 }
