--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@mrksbnc/bamboo",
-	"version": "0.0.1-alpha.1",
+	"version": "0.0.1",
 	"type": "module",
 	"exports": {
 		"./components": {
@@ -47,6 +47,7 @@
 		"vue": "^3.5.25"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.29.8",
 		"@cspell/dict-vue": "^3.0.5",
 		"@prettier/plugin-oxc": "^0.1.3",
 		"@tsconfig/node22": "^22.0.5",
