--- a/package.json
+++ b/package.json
@@ -45,9 +45,13 @@
 		"vue": "^3.5.25"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.29.8",
 		"@cspell/dict-vue": "^3.0.5",
 		"@prettier/plugin-oxc": "^0.1.3",
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/commit-analyzer": "^13.0.1",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/github": "^12.0.2",
+		"@semantic-release/release-notes-generator": "^14.1.0",
 		"@tsconfig/node22": "^22.0.5",
 		"@types/jsdom": "^27.0.0",
 		"@types/node": "^25.0.2",
@@ -66,6 +70,7 @@
 		"prettier": "3.7.4",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"sass-embedded": "^1.96.0",
+		"semantic-release": "^25.0.2",
 		"start-server-and-test": "^2.1.3",
 		"stylelint": "^16.26.1",
 		"stylelint-config-standard": "^39.0.1",
@@ -80,5 +85,5 @@
 		"vitest": "^4.0.15",
 		"vue-tsc": "^3.1.8"
 	},
-	"packageManager": "pnpm@10.26.0+sha512.3b3f6c725ebe712506c0ab1ad4133cf86b1f4b687effce62a9b38b4d72e3954242e643190fc51fa1642949c735f403debd44f5cb0edd657abe63a8b6a7e1e402"
+	"packageManager": "pnpm@10.26.0"
 }
